src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a:hover {
  text-decoration: line-through;
}

.main-splash {
  height: 100vh;
  width: 100%;
  margin-top: -136px /* The navbar height*/
}

.main-splash-link {
  text-decoration: none;
  color: black;
}

.main-splash-letter {
  position: relative;
  font-size: 4rem;
  font-weight: 800
}

.full-width-image {
  width: 100vw;
}

.small-spacer {
  height: 3rem;
}

.section-header {
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 2px;
}

.col-image {
  width: 100%;
}


/* _____ ABOUT PAGE ______ */

.about-intro {
  font-size: 72px;
}

.email-link {
  color: #e1483d;
  transition: .5s;
}

.email-link:hover {
  color: black;
}

/* The social media links circles */
.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  width: 48px;
  height: 48px;
  background-color: transparent;
  border: 2px solid #e1483d;
  font-size: 16px;
  font-weight: bold;
  /* color: red; */
}

.no-bullets {
  list-style-type: none; /* Remove bullets */
  padding: 0; /* Remove padding */
  margin: 0; /* Remove margins */
}

ul.no-bullets li {
  margin-bottom: 1.5rem;
  font-weight: 600;
}



/* _______ SOLE OPINION ________ */

.shoe-text-input {
  border: none;
  font-size: 2rem;
  width: 100%;
  word-wrap: break-word;
  resize: none;
  height: 50vh;
  font-weight: 500;
}

textarea.shoe-text-input:focus {
  outline: none;
}

.react-sketch-canvas {
  width: 100%;
  height: 50vh
}


.dnd-item {
  user-select: none;
  padding: 8px;
  margin: 0 8px 0 0;
  background: lightgrey;
  display: inline-block;
  border-radius: 16px;
  cursor: pointer;
  transition: background-color 0.2s ease;
  width: 8rem;
  text-align: center;
}

.dnd-list {
  display: flex;
  /* overflowX: auto; */
  padding: 8px;
}


/* _______ MEDIA QUERIES _______ */

@media (min-width: 768px) { 
  .main-splash-letter {
    font-size: 8rem;
  }
}

@media (min-width: 992px) { 
  .about-container {
    margin-left: 10rem;
    margin-right: 10rem;
  }
}

